--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -239,6 +239,43 @@ article.active {
   font-weight: var(--fw-500);
 }
 
+/* li{
+  background-image: linear-gradient(-45deg, rgba(255, 255, 255, 0.08) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.08) 50%, rgba(255, 255, 255, 0.08) 75%, transparent 75%, transparent);
+
+} */
+ul.carbon-fiber-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  background-color: transparent;
+}
+
+.carbon-fiber-list a {
+  color: inherit;
+  text-decoration: none;
+}
+
+ul.carbon-fiber-list li {
+  background-color: #262626;
+  background-image: linear-gradient(-45deg, rgba(255, 255, 255, 0.08) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.08) 50%, rgba(255, 255, 255, 0.08) 75%, transparent 75%, transparent);
+  background-size: 8px 8px;
+  background-position: 0 0;
+  color: var(--orange-yellow-crayola);
+  font-weight: bold;
+  padding: 10px;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  transition: all 0.3s ease;
+}
+
+ul.carbon-fiber-list li:hover {
+  background-color: var(--orange-yellow-crayola);
+  color: black;
+  box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
+}
+
+
+
 .article-title {
   position: relative;
   padding-bottom: 7px;
@@ -319,6 +356,9 @@ main {
   max-height: 112px;
   overflow: hidden;
   transition: var(--transition-2);
+  background-image: linear-gradient(-45deg, rgba(255, 255, 255, 0.08) 25%, transparent 25%, transparent 25%, rgba(255, 255, 255, 0.08) 50%, rgba(255, 255, 255, 0.08) 75%, transparent 75%, transparent);
+  /* background-image: linear-gradient(-45deg, rgba(255, 255, 255, 0.08) 5%, transparent 5%, transparent 10%, rgba(255, 255, 255, 0.08) 15%, rgba(255, 255, 255, 0.08) 20%, transparent 20%, transparent); */
+
 }
 
 .sidebar.active { max-height: 405px; }
@@ -1879,4 +1919,26 @@ textarea.form-input::-webkit-resizer { display: none; }
 
   .timeline-text { max-width: 700px; }
 
+}
+
+.glowing-text {
+  text-align: center;
+  color: var(--orange-yellow-crayola);
+  font-size: 36px;
+  font-weight: bold;
+  animation: glowing 1s ease-in-out infinite;
+}
+
+@keyframes glowing {
+  0% {
+    box-shadow: 0 0 5px var(--orange-yellow-crayola), 0 0 10px var(--orange-yellow-crayola), 0 0 15px var(--orange-yellow-crayola), 0 0 20px var(--orange-yellow-crayola), 0 0 25px var(--orange-yellow-crayola), 0 0 30px var(--orange-yellow-crayola), 0 0 35px var(--orange-yellow-crayola);
+  }
+
+  50% {
+    box-shadow: 0 0 10px var(--orange-yellow-crayola), 0 0 15px var(--orange-yellow-crayola), 0 0 20px var(--orange-yellow-crayola), 0 0 25px var(--orange-yellow-crayola), 0 0 30px var(--orange-yellow-crayola), 0 0 35px var(--orange-yellow-crayola), 0 0 40px var(--orange-yellow-crayola);
+  }
+
+  100% {
+    box-shadow: 0 0 5px var(--orange-yellow-crayola), 0 0 10px var(--orange-yellow-crayola), 0 0 15px var(--orange-yellow-crayola), 0 0 20px var(--orange-yellow-crayola), 0 0 25px var(--orange-yellow-crayola), 0 0 30px var(--orange-yellow-crayola), 0 0 35px var(--orange-yellow-crayola);
+  }
 }
